# Aethelgard-QGF

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RELEASE_NOTES.md  SECURITY.md  aethelgard_cli.py  aethelgard_engine.py  aethelgard_engine_gpu.py  aethelgard_time_evolution.py  example_simulation.py  interactive_visualizer.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
aethelgard/: __init__.py
docs/: API_REFERENCE.md
scenarios/: README.md  __init__.py  black_hole_quantum_core.py  dark_energy_cosmology.py  wormhole_stabilization.py
tests/: test_hazard.py  test_security.py  test_time_evolution_security.py
